# XNATSlicer

./: .gitignore  .project  CMakeLists.txt  README.md  README.txt  XNATAddProjEditor.py  XNATBrowser.py  XNATCommunicator.py  XNATFileInfo.py  XNATInstallWizard.py  XNATLoadWorkflow.py  XNATMRMLParser.py  XNATSaveDialog.py  XNATSaveWorkflow.py  XNATScenePackager.py  XNATSettings.py  XNATSlicer.py  XNATTimer.py  XNATTreeView.py  XNATUtils.py  XNATView.py  XnatSlicerReplaceString.py
XNATSlicer/: CMakeLists.txt  XNATSlicer.py
XNATSlicer/Settings/: XnatSettingsFile.ini
XNATSlicer/Testing/Python/: getSizeTest.py  uploadTest.py
XNATSlicer/XNATSlicerLib/: .#XNATButtons.py  DICOMLoadWorkflow.py  DICOMLoader.py  FileLoadWorkflow.py  FileLoader.py  SceneLoadWorkflow.py  SceneLoader.py  XNATButtons.py  XNATCommunicator.py  XNATDeleteWorkflow.py  XNATFileInfo.py  XNATInstallWizard.py  XNATLoadWorkflow.py  XNATLoginMenu.py  XNATMRMLParser.py  XNATPopup.py  XNATSaveDialog.py  XNATSaveWorkflow.py  XNATScenePackager.py  XNATSessionManager.py  XNATSettings.py  XNATTimer.py  XNATTreeView.py  XNATUtils.py  XNATView.py  XnatDicomLoadWorkflow.py  XnatSceneLoadWorkflow.py  XnatSettingsPopup.py  __init__.py  tester.py
XNATSlicer/XNATSlicerLib/UI/: XnatHostEditorUI.py  XnatLoginMenuUI.py
XNATSlicer/XNATSlicerLib/python_mod/win32/: lxml-2.2.8-py2.6-win32.egg
XNATSlicer/XnatSlicerLib/ui/: XnatButtons.py
XNATSlicerLib/: XNATBrowser.py  XNATSaveDialog.py  XNATSessionManager.py  XNATUtils.py
XNATSlicerLib/data/Utils/: XNATSettings.ini
XNATSlicerLib/python_mod/win64/: lxml-2.2.8-py2.6-win-amd64.egg
XnatSlicer/: .project  XnatSlicer.py
XnatSlicer/Settings/: XnatSettings.ini
XnatSlicer/Testing/: XnatSlicerTest.py
XnatSlicer/Testing/Python/: .#getSizeTest.py  getSizeTest.py
XnatSlicer/XnatSlicerLib/: .#tester.py  XnatButtons.py  XnatCommunicator.py  XnatDeleteWorkflow.py  XnatDicomLoadWorkflow.py  XnatError.py  XnatFilter.py  XnatHostEditor.py  XnatLoadWorkflow.py  XnatLoginMenu.py  XnatMrmlParser.py  XnatPopup.py  XnatSaveDialog.py  XnatSaveWorkflow.py  XnatSceneLoadWorkflow.py  XnatSessionManager.py  XnatSettings.py  XnatSettingsWindow.py  XnatTreeView.py  XnatUtils.py  XnatView.py  tester.py
XnatSlicer/XnatSlicerLib/UI/: XnatButtonsUI.py  XnatHostEditorUI.py  XnatLoginMenuUI.py
XnatSlicer/XnatSlicerLib/data/Projects/test3a/localFiles/: test3a-LOCALIZED.mrml  test3a.mrml
XnatSlicer/XnatSlicerLib/data/Projects/test3a/localFiles/Data/: F.acsv  F_1.acsv  F_2.acsv  F_3.acsv
XnatSlicer/XnatSlicerLib/data/Projects/test3b-f/localFiles/: test3b-f-LOCALIZED.mrml  test3b-f.mrml
XnatSlicer/XnatSlicerLib/data/Projects/test3b-f/localFiles/Data/: F.acsv
XnatSlicer/XnatSlicerLib/data/Projects/test6a/localFiles/: test6a-LOCALIZED.mrml  test6a.mrml
XnatSlicer/XnatSlicerLib/data/Utils/: SessionLog.txt  XNATSettings.ini  XnatSettings.ini  slicerDICOMDBBackup.txt
XnatSlicer/XnatSlicerLib/io/: XnatAnalyzeLoadWorkflow.py  XnatDeleteWorkflow.py  XnatDicomLoadWorkflow.py  XnatFileLoadWorkflow.py  XnatIo.py  XnatLoadWorkflow.py  XnatSaveWorkflow.py  XnatSceneLoadWorkflow.py
XnatSlicer/XnatSlicerLib/ui/: XnatAddProjEditor.py  XnatAnimatedCollapsible.py  XnatButtons.py  XnatButtonsUI.py  XnatFilter.py  XnatFolderMaker.py  XnatHostEditor.py  XnatHostEditorUI.py  XnatHostManager.py  XnatLoginMenu.py  XnatLoginMenuUI.py  XnatMetadataManager.py  XnatNodeDetails.py  XnatSaveDialog.py  XnatSearchBar.py  XnatSettingManager.py  XnatSettingsWindow.py  XnatTreeView.py  XnatTreeViewManager.py  XnatView.py  XnatViewer.py
XnatSlicer/XnatSlicerLib/ui-settings/: XnatDetailsSettings.py  XnatHostSettings.py  XnatMetadataSettings.py  XnatSettings.py  XnatTreeViewSettings.py
XnatSlicer/XnatSlicerLib/ui/custom-qt-widgets/: AnimatedCollapsible.py  CustomEventFilter.py  FingerTabWidget.py  HoverButton.py  VariableItemListWidget.py
XnatSlicer/XnatSlicerLib/ui/settings-widgets/: XnatDetailsSettings.py  XnatHostSettings.py  XnatMetadataEditor.py  XnatMetadataSettings.py  XnatSettings.py  XnatTreeViewSettings.py
XnatSlicer/XnatSlicerLib/ui2/: XnatFilter.py  XnatLoginMenu.py
XnatSlicer/XnatSlicerLib/utils/: XnatAnimatedCollapsible.py  XnatGlobals.py  XnatPopup.py  XnatScenePackager.py  XnatSessionManager.py  XnatSettings.py  XnatSettingsFile.py  XnatUtils.py
XnatSlicer2/: CMakeLists.txt  XnatSlicer.py  installTest.txt
XnatSlicer2/Testing/Python/: getSizeTest.py
XnatSlicer2/XnatSlicerLib/: RecursiveFileList.txt  XnatAddProjEditor.py  XnatButtons.py  XnatCommunicator.py  XnatFileInfo.py  XnatFileLoadWorkflow.py  XnatLoadWorkflow.py  XnatLoginMenu.py  XnatMrmlParser.py  XnatPopup.py  XnatSaveWorkflow.py  XnatSceneLoadWorkflow.py  XnatScenePackager.py  XnatSettings.py  XnatTimer.py  XnatUtils.py  XnatView.py  __init__.py  tester.py
XnatSlicer2/XnatSlicerLib/UI/: XnatButtonsUI.py
XnatSlicer2/XnatSlicerLib/icons/: Thumbs.db
